mejorado header, agregue mapas, extend y mixin para cumplir el desafio, incorpore boton de comprar en carrito

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/ionicons/2.0.1/css/ionicons.min.css">
 </head>
 <body>
+    <h1 style="display: none;">BAD DESIGN</h1>
     <div class="grid-container">
 
             <p class="logo-bad grid-item text" data-text="BAD"">BAD</p>
