--- a/paginas/carrito.html
+++ b/paginas/carrito.html
@@ -29,9 +29,6 @@
             <a class="nav-link active" aria-current="page" href="novedades.html">Novedades</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="carrito.html">Carrito</a>
-          </li>
-          <li class="nav-item">
             <a class="nav-link active" aria-current="page" href="preguntas-frecuentes.html">Preguntas Frecuentes</a>
           </li>
           <li class="nav-item">
@@ -48,6 +45,9 @@
               <li><a class="dropdown-item" href="#">Remeras</a></li>
             </ul>
           </li>
+          <li class="nav-item">
+            <a class="nav-link active" aria-current="page" href="carrito.html">Carrito</a>
+          </li>
         </ul>
         <form class="d-flex " role="search">
           <input class="form-control me-2 " type="search" placeholder="Buscar..." aria-label="Search">
@@ -58,7 +58,7 @@
   </nav>
     
 
-    <div >
+    <div class="main">
         <div class="contenido-carro">
             <div>
             <p>REMERA SPIRTE</p>
@@ -81,6 +81,9 @@
             </div>
             <img src="/multi/img/ropa6.jpg" alt="">
         </div>
+        
+        <input type="button" value="Proceder al pago" class="comprar">
+
 
     </div>
 
