--- a/index.html
+++ b/index.html
@@ -4,8 +4,18 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>BAD DESIGN</title>
+
+    <meta name="description" content="En Bad Design ofrecemos prendas de altisima calidad con diseños de bajisima calidad, tambien ploteamos autos y hacemos podas en altura">
+    <meta name="keywords" content="Remeras, buzos, pantalones, ropa, diseños, shitpost, memes, prendas, abrigos, diseño malo, ropa buena, alternativo, estilo, moda">
+
+    <meta property="og:title" content="Diseñamos mal y hacemos el bien">
+    <meta property="og:description" content="En Bad Design ofrecemos prendas de altisima calidad con diseños de bajisima calidad, tambien ploteamos autos y hacemos podas en altura">
+    <meta property="og:image" content="https://baddesigns.000webhostapp.com/multi/img/Logo.png">
+    <title>BAD DESIGN | Diseñamos mal y hacemos el bien</title>
+
     <link rel="stylesheet" href="css/style.css">
+
+
     <!-- Bootstrap -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.1.3/css/bootstrap.min.css">
@@ -23,7 +33,8 @@
     </div>
 
     <div class="video-container">
-        <video src="multi/video/video-de-fondo.mp4" autoplay loop muted></video>
+       <!-- <iframe src="https://www.youtube.com/embed/R9hop7YXPsc?controls=0" title="Video Bad Design de fondo" autoplay loop mute></iframe> -->
+       <video src="multi/video/video-de-fondo.mp4" autoplay loop muted title="Video de Fondo Bad Design"></video>
     </div>
 
     <div class="footer-basic">
