--- a/paginas/carrito.html
+++ b/paginas/carrito.html
@@ -65,21 +65,21 @@
             <p>1 unidad - 200peso</p>
             </div>
             
-            <img src="/multi/img/ropa1.jpg" alt="">
+            <img src="/multi/img/ropa1.jpg" alt="Remera manga corta de spirte sprite floppa zabloing">
         </div>
         <div class="contenido-carro">
             <div>
             <p>REMERA BINGUS</p>
             <p>Cantidad</p>
             </div>
-            <img src="/multi/img/ropa2.jpg" alt="">
+            <img src="/multi/img/ropa2.jpg" alt="Remera manga corta de bingus mi amado my beloved">
         </div>
         <div class="contenido-carro">
             <div>
             <p>TITULOaaaaaaaaa</p>
             <p>Cantidad bruh no quiero escribir esto es al pedo</p>
             </div>
-            <img src="/multi/img/ropa6.jpg" alt="">
+            <img src="/multi/img/ropa6.jpg" alt="Remera manga corta de pepe apu apustaja tengo autismo">
         </div>
         
         <input type="button" value="Proceder al pago" class="comprar">
