--- a/paginas/catalogo.html
+++ b/paginas/catalogo.html
@@ -61,41 +61,41 @@
 
     <main class="contenido container">
         <div>
-            <img src="/multi/img/ropa1.jpg" alt="" class="contenido__remeras">
+            <img src="/multi/img/ropa1.jpg" alt="Remera manga corta de spirte sprite floppa zabloing" class="contenido__remeras">
             <p class="contenido__titulo">REMERULI SPIRTE</>
             <p class="contenido__subtitulo">Hola sale 200pesos gracias </p>
             <input type="button" value="Añadir al carrito">
         </div>
         <div>
-            <img src="/multi/img/ropa2.jpg" alt="" class="contenido__remeras">
+            <img src="/multi/img/ropa2.jpg" alt="Remera manga corta de bingus mi amado my beloved" class="contenido__remeras">
             <p class="contenido__titulo">REMERULI BINGUS</>
             <p class="contenido__subtitulo">Hola sale 200pesos gracias </p>
             <input type="button" value="Añadir al carrito">
 
         </div>
         <div>
-            <img src="/multi/img/ropa3.webp" alt="" class="contenido__remeras">
+            <img src="/multi/img/ropa3.webp" alt="Buzo de Obama prism prisma gris" class="contenido__remeras">
             <p class="contenido__titulo">BUZO OBAMA PRISM</>
             <p class="contenido__subtitulo">Hola sale 200pesos gracias </p>
             <input type="button" value="Añadir al carrito">
 
         </div>
         <div>
-            <img src="/multi/img/ropa4.jpg" alt="" class="contenido__remeras">
+            <img src="/multi/img/ropa4.jpg" alt="Remera manga corta de Saddam Houssein" class="contenido__remeras">
             <p class="contenido__titulo">REMERA SADDAM</p>
             <p class="contenido__subtitulo">Hola sale 200pesos gracias </p>
             <input type="button" value="Añadir al carrito">
 
         </div>
         <div>
-            <img src="/multi/img/ropa5.jpg" alt="" class="contenido__remeras">
+            <img src="/multi/img/ropa5.jpg" alt="Remera celeste manga corta diarrea" class="contenido__remeras">
             <p class="contenido__titulo">REMERA SCI</>
             <p class="contenido__subtitulo">Hola sale 200pesos gracias </p>
             <input type="button" value="Añadir al carrito">
 
         </div>
         <div>
-            <img src="/multi/img/ropa6.jpg" alt="" class="contenido__remeras">
+            <img src="/multi/img/ropa6.jpg" alt="Remera manga corta de pepe apu apustaja tengo autismo" class="contenido__remeras">
             <p class="contenido__titulo">REMERA PEPE</>
             <p class="contenido__subtitulo">Hola sale 200pesos gracias </p>
             <input type="button" value="Añadir al carrito">
